<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/shopping_cart_bg"
    android:id="@+id/activity_pay_pal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ucd.android.qwikscan.paymentMethods.PayPal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="198dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/paypal_upper"
                android:text="@string/paypal_upper"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="257dp"
                android:id="@+id/imageView2"
                app:srcCompat="@drawable/vzero_diagram_overview" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/paypal_lower"
                android:text="@string/paypal_lower"/>

            <Button
                android:background="@drawable/button_shape"
                android:text="@string/ok_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pay_pal_leave"
                android:textColor="@color/appBackground"
                />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/silver_pill_paypal_60px"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView4" />


</RelativeLayout>
