<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/shopping_cart_bg"
    tools:context="com.ucd.android.qwikscan.screens.Payment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:id="@+id/total_textview"
        android:textSize="18sp" />


    <Button
        android:background="@drawable/button_shape"
        android:text="@string/cash_card_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/cash_card"
        android:layout_below="@+id/paypal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/appBackground" />

    <Button
        android:background="@drawable/button_shape"
        android:text="@string/paypal_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/paypal"
        android:layout_below="@+id/total_textview"
        android:layout_alignStart="@+id/cash_card"
        android:layout_marginTop="143dp"
        android:textColor="@color/appBackground" />

    <Button
        android:background="@drawable/button_shape"
        android:text="@string/android_pay_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/android_pay"
        android:layout_below="@+id/total_textview"
        android:layout_alignStart="@+id/paypal"
        android:layout_marginTop="44dp"
        android:textColor="@color/appBackground" />

    <TextView
        android:text="Total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:id="@+id/textView4"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

</RelativeLayout>
