<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/shopping_cart_bg"
    android:id="@+id/activity_android_pay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ucd.android.qwikscan.paymentMethods.AndroidPay">

        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="198dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/android_upper"
                android:text="@string/android_upper"
               />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/android_pay_process"
                android:id="@+id/imageView2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/android_lower"
                android:text="@string/android_lower"/>

            <Button
                android:background="@drawable/button_shape"
                android:text="@string/ok_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/android_pay_leave"
                android:textColor="@color/appBackground"

                />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/android_pay_logo"
        android:id="@+id/imageView"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:layout_marginBottom="390dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
