<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".screens.Scan"
    android:background="@drawable/shopping_cart_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearlayout1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/delete"
            android:textStyle="italic"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/tableBg"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="18dp"
            android:id="@+id/scrollView2"
            android:layout_height="250dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/table"
                android:stretchColumns="*"
                >
                <TableRow android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/tableBg"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textAlignment="center">
                    <TextView
                        android:text="@string/product_name"
                        android:textSize="18sp"
                        android:textColor="@color/appBackground"
                        android:id="@+id/product_name"
                        android:paddingLeft="7dp" />
                    <TextView
                        android:text="@string/product_price"
                        android:textSize="18sp"
                        android:textColorLink="@color/colorAccent"
                        android:textColor="@color/appBackground"
                        android:id="@+id/product_price"
                        android:textAlignment="textEnd"
                        android:paddingRight="7dp"></TextView>

                </TableRow>
            </TableLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">
        <Button
            android:id="@+id/scan_button"
            android:background="@drawable/button_shape"
            android:layout_marginLeft="10dp"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:text="@string/scan"
            android:textColor="@color/appBackground"
            android:layout_marginRight="10dp" />
        <Button
            android:id="@+id/proceed_button"
            android:background="@drawable/button_shape"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/proceed"
            android:textColor="@color/appBackground"
            android:layout_marginRight="10dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout2"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_alignTop="@+id/textViewdash"
        android:layout_alignParentStart="true">
        <TextView
            android:text="Total"
            android:id="@+id/textView2"
            android:layout_height="30dp"
            android:layout_width="200dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.80"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/total"
            android:layout_height="30dp"
            android:layout_width="70dp"
            android:layout_marginTop="20dp"
            android:layout_above="@+id/proceed"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="60dp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewdash"
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:textColor="@color/tableBg"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/linearlayout1"
        android:layout_alignParentStart="true" />
</RelativeLayout>
